# synthefy-package-external

./: .env.local  README.md  generate_oura_subset_data.py  pyproject.toml  results.parquet
examples/: Forecasting-Streaming.ipynb  NYCFHV.ipynb  Synthesis-Streaming.ipynb  air_quality_data_stream.json  air_quality_data_window.csv  air_quality_data_window_metadata_only.csv  anomaly_detection_utils.py  anomaly_stream.json  baseline_eval.py  cltsp.py  cltsp_eval.py  compare_forecasting_models.py  compare_metrics.py  comparison_report.py  data_summary.py  emsx_probabilistic_line_plots.py  filter_and_process_metadata.py  fm_evals_example.ipynb  forecast.py  forecasting_evaluation_chronos.py  foundation_forecast.py  generate_long_term_data.py  generate_synthetic_data.py  goodrx_clustering_docs.py  launch_backend.py  local-fm-api-test.py  post_preprocess.py  postprocessing_report.py  preprocess_data.py  python_api_example_template.txt  synthefy-foundation-model-anomaly-detection-notebook.ipynb  synthefy-foundation-model-metadata-enrichment-notebook.ipynb  synthefy-foundation-model-notebook-dev.ipynb  synthefy-foundation-model-notebook.ipynb  synthefy-trstr-notebook.ipynb  synthefy_helpers.py  synthesize.py  tstr.py  tstr_lightgbm.py  walmart_sales.csv  (+1 more)
examples/configs/: .env
examples/configs/api_configs/: api_config_air_quality.yaml  api_config_infovista_ativa.yaml  api_config_infovista_halo.yaml  api_config_nycfhv.yaml  api_config_opanga.yaml  api_config_ppg.yaml  api_config_twamp_one_month.yaml
examples/configs/cltsp_configs/: config_ppg_cltsp.yaml  config_ppg_hr_samsung_cltsp.yaml
examples/configs/forecast_configs/: config_air_quality_forecasting.yaml  config_air_quality_forecasting_sfm1.yaml  config_air_quality_patchtst.yaml  config_air_quality_sfm2.yaml  config_air_quality_timesfm.yaml  config_air_quality_timesfm2.yaml  config_algo8_forecasting.yaml  config_child_sleep_states_forecasting_sfm1.yaml  config_electricity_forecasting.yaml  config_electricity_forecasting_patchtst.yaml  config_electricity_forecasting_sfm1.yaml  config_electricity_forecasting_sfm2.yaml  config_electricity_forecasting_timesfm.yaml  config_electricity_forecasting_timesfm2.yaml  config_electricity_icml_forecasting_patchtst.yaml  config_electricity_icml_forecasting_sfm1.yaml  config_electricity_icml_forecasting_sfm2.yaml  config_electricity_icml_forecasting_timesfm.yaml  config_energy_demand_forecasting.yaml  config_energy_demand_forecasting_sfm1.yaml  config_energy_demand_timesfm.yaml  config_etth1_forecasting.yaml  config_etth1_forecasting_patchtst.yaml  config_etth1_forecasting_sfm1.yaml  config_etth1_forecasting_timesfm.yaml  config_etth2_forecasting.yaml  config_etth2_forecasting_patchtst.yaml  config_etth2_forecasting_sfm1.yaml  config_etth2_forecasting_timesfm.yaml  config_ettm1_forecasting.yaml  config_ettm1_forecasting_patchtst.yaml  config_ettm1_forecasting_sfm1.yaml  config_ettm1_forecasting_timesfm.yaml  config_ettm2_forecasting.yaml  config_ettm2_forecasting_patchtst.yaml  config_ettm2_forecasting_sfm1.yaml  config_ettm2_forecasting_timesfm.yaml  config_infovista_ativa_forecasting_sfm1.yaml  config_infovista_halo_forecasting.yaml  config_infovista_halo_forecasting_patchtst.yaml  (+33 more)
examples/configs/foundation_model_configs/: config_fmv3e_synthetic_train.yaml  config_forecasting_foundation_model_small_test_v3e.yaml  config_forecasting_foundation_model_v2.yaml  config_forecasting_foundation_model_v2_timesfm.yaml  config_forecasting_foundation_model_v3.yaml  config_forecasting_foundation_model_v3_50k.yaml  config_forecasting_foundation_model_v3e.yaml  config_forecasting_foundation_model_v3e_haver5m_synthefy250k.yaml  config_forecasting_foundation_model_v3e_haver6m.yaml  config_icl_decoder_train.yaml  config_icl_grid_train.yaml  config_icl_synthetic_saved_train.yaml  config_icl_synthetic_train.yaml  config_icl_synthetic_train_with_embedder.yaml  config_syn_uni_sfm.yaml  config_syn_uni_sfm_with_pos_enc.yaml  config_uni_icl_train.yaml
examples/configs/preprocessing_configs/: .gitignore  config_air_quality_preprocessing.json  config_alcohol_preprocessing.json  config_algo8_fmv2_preprocessing.json  config_arima_fmv2_preprocessing.json  config_child_sleep_states.json  config_electricity_icml_preprocessing.json  config_electricity_preprocessing.json  config_energy_demand_preprocessing.json  config_etth1_preprocessing.json  config_etth2_preprocessing.json  config_ettm1_preprocessing.json  config_ettm2_preprocessing.json  config_illness_preprocessing.json  config_infovista_ativa_preprocessing.json  config_infovista_halo_preprocessing.json  config_motionsense_all_timeseries.json  config_motionsense_preprocessing.json  config_nist_preprocessing.json  config_nycfhv_preprocessing.json  config_opanga2_preprocessing.json  config_oura_preprocessing.json  config_oura_subset_preprocessing.json  config_oura_superset_preprocessing.json  config_ppg_hr_preprocessing.json  config_ppg_preprocessing.json  config_ppg_samsung_preprocessing.json  config_rrest_preprocessing.json  config_samsung_preprocessing.json  config_se_emsx_preprocessing.json  config_se_uc1_preprocessing.json  config_tektronix_bitstream_preprocessing.json  config_tektronix_preprocessing.json  config_time_mmd_agriculture_preprocessing.json  (+15 more)
modal/: __init__.py  synthefy_pkg_wrapper.py
oura_demo/: README.md  __init__.py  fake_oura_subset_data.parquet  inference_example.ipynb  inference_example.py  results.csv  results.parquet
oura_demo/api/: __init__.py  main.py  models.py  pyproject.toml
oura_demo/api/routers/: __init__.py  config.py  inference.py  llm.py  upload.py
oura_demo/api/services/: __init__.py  config_loader.py  demo_synthesis_service.py  llm_service.py
oura_demo/ui/: create_sample_windows.py  index.html  package-lock.json  package.json  process_data.py  tailwind.config.js
src/: compile.py
src/synthefy_pkg/: __init__.py  alembic.ini
synthefy-dataset-utils/: README.md  pyproject.toml
synthefy-dataset-utils/src/synthefy_dataset_utils/: __init__.py  convert_to_sharded.py  sharded_dataset_reader.py  sharded_dataset_writer.py
(+649 files in other folders)
