[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthefy_pkg"]

[project]
name = "synthefy_pkg"
version = "0.0.6"
authors = [{ name = "Shubhankar Agarwal", email = "somi@synthefy.com" }]
description = "A package for time series generation."
requires-python = "==3.11.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "absl-py==2.1.0",
    "aioboto3==13.4.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.1",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.6.2.post1",
    "arabic-reshaper==3.0.0",
    "asn1crypto==1.5.1",
    "asttokens==3.0.0",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "black==24.2.0",
    "blinker==1.9.0",
    "blis==1.1.0",
    "bokeh==3.6.2",
    "boto3==1.36.0",
    "boto3-stubs==1.35.73",
    "botocore==1.36.0",
    "botocore-stubs==1.35.74",
    "brotli==1.1.0",
    "build==1.1.1",
    "cachelib==0.13.0",
    "catalogue==2.0.10",
    "certifi==2024.2.2",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudpathlib==0.20.0",
    "cloudpickle==3.1.0",
    "cmdstanpy==1.2.4",
    "confection==0.1.5",
    "contourpy==1.3.0",
    "coverage==7.6.8",
    "crps==2.0.4",
    "cryptography==44.0.0",
    "cssselect2==0.7.0",
    "cvxpy>=1.6.0",
    "cycler==0.12.1",
    "cymem==2.0.10",
    "cython==3.0.11",
    "dataclasses-json==0.6.7",
    "decorator==5.1.1",
    "deprecation==2.1.0",
    "dill==0.3.9",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docker-pycreds==0.4.0",
    "ecos>=2.0.14",
    "einops==0.8.0",
    "einshape==1.0",
    "email-validator==2.2.0",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fancycompleter==0.9.1",
    "fastai>=2.8.0",
    "fastapi==0.115.12",
    "fastapi-cli==0.0.5",
    "fastcore>=1.8.0",
    "fastdownload==0.0.7",
    "fastprogress==1.0.3",
    "filelock==3.13.1",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-session==0.8.0",
    "fonttools==4.55.0",
    "frozendict>=2.4.6",
    "frozenlist==1.4.1",
    "fsspec==2024.2.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "google-pasta==0.2.0",
    "gotrue==2.11.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "h2==4.1.0",
    "h5py==3.12.1",
    "holidays==0.61",
    "hpack==4.0.0",
    "html5lib==1.1",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "huggingface-hub==0.27.0",
    "hydra-core==1.3.2",
    "hyperframe==6.0.1",
    "idna==3.6",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.4.5",
    "iniconfig==2.0.0",
    "inquirerpy==0.3.4",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "itsdangerous==2.2.0",
    "jax==0.4.28",
    "jax-cuda12-pjrt==0.4.28 ; sys_platform == 'linux'",
    "jax-cuda12-plugin==0.4.28 ; sys_platform == 'linux'",
    "jaxlib==0.4.28",
    "jedi==0.19.2",
    "jinja2==3.1.3",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "jupyterlab_pygments==0.3.0",
    "kiwisolver==1.4.7",
    "langchain-community",
    "langchain-openai",
    "langchain-text-splitters",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "langsmith",
    "lightning==2.2.0.post0",
    "lightning-utilities==0.10.1",
    "llvmlite==0.43.0",
    "loguru==0.7.2",
    "lxml==5.3.0",
    "mako==1.3.6",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "marshmallow==3.23.1",
    "matplotlib==3.7.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "memory-profiler==0.61.0",
    "mergedeep>=1.3.4",
    "ml-dtypes==0.5.0",
    "mpmath==1.3.0",
    "msgspec==0.18.6",
    "multidict==6.0.5",
    "murmurhash==1.0.11",
    "mypy-boto3-s3==1.35.74",
    "mypy-extensions==1.0.0",
    "mysql-connector-python==9.1.0",
    "networkx==3.2.1",
    "numba==0.60.0",
    "numpy==1.26.4",
    "nvidia-cublas-cu12>=12.1.3.1 ; sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12>=12.1.105 ; sys_platform == 'linux'",
    "nvidia-cuda-nvcc-cu12>=12.6.85 ; sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12>=12.1.105 ; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12>=12.1.105 ; sys_platform == 'linux'",
    "nvidia-cudnn-cu12>=8.9.2.26 ; sys_platform == 'linux'",
    "nvidia-cufft-cu12>=11.0.2.54 ; sys_platform == 'linux'",
    "nvidia-curand-cu12>=10.3.2.106 ; sys_platform == 'linux'",
    "nvidia-cusolver-cu12>=11.4.5.107 ; sys_platform == 'linux'",
    "nvidia-cusparse-cu12>=12.1.0.106 ; sys_platform == 'linux'",
    "nvidia-nccl-cu12>=2.19.3 ; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12>=12.6.85 ; sys_platform == 'linux'",
    "nvidia-nvtx-cu12>=12.1.105 ; sys_platform == 'linux'",
    "omegaconf==2.3.0",
    "openai==1.77.0",
    "opt-einsum==3.4.0",
    "orjson==3.10.12",
    "oscrypto==1.3.0",
    "packaging==23.2",
    "pandarallel==1.6.5",
    "pandas==2.1.4",
    "papermill==2.6.0",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "patsy==1.0.1",
    "pdbpp==0.10.3",
    "pdfkit==1.0.0",
    "pexpect==4.9.0",
    "pfzy==0.3.4",
    "pillow==10.2.0",
    "platformdirs==4.2.0",
    "plotly==5.19.0",
    "pluggy==1.5.0",
    "polars==1.12.0",
    "postgrest==0.18.0",
    "preshed==3.0.9",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.1",
    "prophet==1.1.5",
    "protobuf==5.29.2",
    "protobuf3-to-dict==0.1.5",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==15.0.2",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings>=2.5.2",
    "pydyf==0.11.0",
    "pygments==2.18.0",
    "pyhanko==0.25.3",
    "pyhanko-certvalidator==0.26.5",
    "pyparsing==3.2.0",
    "pypdf==5.1.0",
    "pyphen==0.15.0",
    "pyproject-hooks==1.0.0",
    "pyrepl==0.9.0",
    "pytest==8.3.2",
    "pytest-asyncio==0.25.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "python-bidi==0.6.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.19",
    "pytorch-lightning==2.2.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.1",
    "qrcode==8.0",
    "realtime==2.5.3",
    "regex==2024.11.6",
    "reportlab==4.2.5",
    "requests==2.31.0",
    "rich==13.9.4",
    "s3transfer>=0.11.0,<0.12.0",
    "sagemaker==2.10.0",
    "scikit-learn==1.4.1.post1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "sentence-transformers>=4.0.2,<5.0.0",
    "sentry-sdk==2.19.2",
    "setproctitle==1.3.4",
    "shellingham==1.5.4",
    "six==1.16.0",
    "slack-sdk==3.33.1",
    "smart-open==7.1.0",
    "smdebug-rulesconfig==0.1.5",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "spacy==3.8.3",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlalchemy==2.0.36",
    "srsly==2.5.0",
    "stack-data==0.6.3",
    "stanio==0.5.1",
    "starlette==0.40.0",
    "statannotations==0.7.0",
    "statsmodels==0.14.4",
    "storage3==0.9.0",
    "stumpy==1.13.0",
    "supabase==2.10.0",
    "supafunc==0.7.0",
    "svglib==1.5.1",
    "swarm-visualizer",
    "sympy==1.12",
    "tenacity==8.5.0",
    "thinc==8.3.3",
    "threadpoolctl==3.5.0",
    "tiktoken",
    "timesfm==1.2.3",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "tomli==2.0.1",
    "torch>=2.3.0,<3.0.0",
    "torchaudio>=2.3.0,<3.0.0",
    "torchmetrics>=1.3.1,<2.0.0",
    "torchvision>=0.18.0,<1.0.0",
    "tqdm==4.66.2",
    "traitlets==5.14.3",
    "transformers>=4.47.1,<5.0.0",
    "triton>=2.3.0 ; sys_platform == 'linux'",
    "typer==0.15.2",
    "types-awscrt==0.23.3",
    "types-s3transfer==0.10.4",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "ujson==5.10.0",
    "uritools==4.0.3",
    "urllib3==1.26.16",
    "utilsforecast==0.2.4",
    "uvicorn==0.32.1",
    "uvloop==0.21.0",
    "wandb==0.19.1",
    "wasabi==1.1.3",
    "watchfiles==1.0.0",
    "wcwidth==0.2.13",
    "weasyprint==63.0",
    "webencodings==0.5.1",
    "weasel==0.4.1",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wmctrl==0.5",
    "wrapt==1.17.0",
    "xlrd==2.0.1",
    "yarl==1.18.3",
    "zipp==3.21.0",
    "zopfli==0.2.3.post1",
    "ruff==0.9.9",
    "pre-commit>=4.1.0",
    "pyright>=1.1.405",
    "pyjwt==2.10.1",
    "kagglehub",
    "datasets",
    "autogluon-timeseries >= 1.2b, < 2.0.0",
    "tabpfn-client==0.1.1",
    "kagglehub",
    "jsonschema==4.23.0",
    "pandas-stubs>=2.2.3.250308",
    "osqp==0.6.7.post3",
    "pympler==1.1",
    "pinecone[asyncio]>=7.0.0",
    "backoff>=2.2.1",
    "pyjstat>=2.4.0",
    "celery>=5.3.4,<6.0.0",
    "flower>=2.0.0,<3.0.0",
    "redis>=6.0.0,<7.0.0",
    "exa-py>=1.8.9",
    "isodate>=0.7.2",
    "haver>=0.7.0",
    "mlflow==2.22.0",
    "ijson>=3.4.0",
    "langgraph~=0.5.0",
    "langchain",
    "langchain-core>=0.1.52",
    "langchain_google_genai==2.1.7",
    "langchain-experimental>=0.3.5rc1",
    "toml>=0.10.2",
    "ollama>=0.5.1",
    "ratelimit>=2.2.1",
    "chronos-forecasting>=1.5.0",
    "pycausalimpact==0.0.16",
    "s3fs>=2024.2.0",
    "tabulate>=0.9.0",
    "shap>=0.48.0",
    "mcp==1.10.1",
    "fastmcp==2.0.0",
    "langchain-mcp-adapters>=0.1.7",
    "pynvml>=12.0.0",
    "statsforecast>=1.7.8",
    "google-cloud-bigquery>=3.30.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "tabpfn==2.0.0",
    "tabpfn-time-series==0.1.2",
    "ipdb>=0.13.13",
    "pmdarima==2.0.4",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "psutils>=3.3.11",
    "synthefy>=2.1.1",
    "arch>=7.2.0",
    "pysindy>=2.0.0rc2",
    "pyts>=0.13.0",
    "tsfeatures>=0.4.5",
    "modal>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyyaml>=6.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

# Add build isolation exceptions if needed
no-build-isolation-package = ["torch", "timesfm"]

[tool.uv.pip]
no-strip-markers = true

[tool.uv.sources]
swarm-visualizer = { git = "https://github.com/UTAustin-SwarmLab/Swarm-Visualization", rev = "0474cfbe81a68058c7af61d990f0731ec677270e" }

[tool.ruff]
line-length = 80         # Match your desired line length
target-version = "py311" # Since you're using Python 3.11

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
]
ignore = ["F401", "E501"] # Ignore unused imports and line length

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "tests"]
pythonVersion = "3.11.*"
typeCheckingMode = "basic"
